--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Hi there</h1>
     <p> This is a paragraph </p>
+    <form>
+        <input type="text" />
+        <button>Click here</button>
 </body>
 </html>
